--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,42 +1,119 @@
 {
-  "name": "CreditWise AI",
-  "short_name": "CreditWise",
-  "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
-  "start_url": "/",
-  "scope": "/",
+  "theme_color": "#4361ee",
+  "background_color": "#f5f7fa",
   "display": "standalone",
-  "background_color": "#F0F2F5",
-  "theme_color": "#3F51B5",
-  "orientation": "portrait",
-  "display_override": [
-    "standalone"
-  ],
+  "scope": "/",
+  "start_url": "/",
+  "name": "CreditWise AI",
+  "short_name": "CreditWiseAI",
+  "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     },
     {
-      "src": "/icons/maskable_icon.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
+      "src": "/icon-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
+      "type": "image/png"
     }
   ],
-  "background_sync": {},
-  "periodic_background_sync": {},
-  "push_notifications": {},
+  "shortcuts": [
+    {
+      "name": "Analyze Credit Report",
+      "short_name": "Analyze",
+      "description": "Go directly to the credit analysis page",
+      "url": "/credit",
+      "icons": [
+        {
+          "src": "/icon-192x192.png",
+          "sizes": "192x192"
+        }
+      ]
+    },
+    {
+      "name": "Verify Document",
+      "short_name": "Verify",
+      "description": "Go directly to the document verification page",
+      "url": "/verify",
+      "icons": [
+        {
+          "src": "/icon-192x192.png",
+          "sizes": "192x192"
+        }
+      ]
+    }
+  ],
+  "share_target": {
+    "action": "/share-target",
+    "method": "GET",
+    "params": {
+      "title": "title",
+      "text": "text",
+      "url": "url"
+    }
+  },
+  "id": "/?utm_source=pwa",
+  "screenshots": [
+    {
+      "src": "/screenshots/screenshot1.png",
+      "type": "image/png",
+      "sizes": "1080x2340",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "/screenshots/screenshot2.png",
+      "type": "image/png",
+      "sizes": "1920x1080",
+      "form_factor": "wide"
+    }
+  ],
   "related_applications": [],
   "prefer_related_applications": false,
-  "scope_extensions": [
-    { "origin": "*.creditwise.ai" }
+  "categories": ["finance", "business"],
+  "iarc_rating_id": "e84b072d-71b3-4d3e-86ae-31a8ce4e53b7",
+  "dir": "auto",
+  "lang": "en-US",
+  "orientation": "portrait",
+  "display_override": [
+    "window-controls-overlay"
+  ],
+  "widgets": [
+    {
+      "name": "CreditWise AI Summary",
+      "description": "Quickly access your credit analysis insights.",
+      "tag": "summary",
+      "template": "summary_widget",
+      "ms_ac_template": "widgets/summary_widget.json",
+      "data": "widgets/summary_data.json",
+      "type": "application/json",
+      "screenshots": [
+        {
+          "src": "/screenshots/widget_preview.png",
+          "sizes": "320x180",
+          "type": "image/png"
+        }
+      ],
+      "icons": [
+        {
+          "src": "/icon-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+        }
+      ],
+      "auth": false,
+      "update": 86400
+    }
   ]
 }
