--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -1,22 +1,88 @@
 {
   "name": "CreditWise AI",
-  "short_name": "CW-A",
-  "description": "CreditWise AI helps users analyze CIBIL reports instantly with smart forensic and financial insights.",
-  "id": "/?source=pwa",
+  "short_name": "CreditWiseAI",
+  "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
   "start_url": "/",
+  "id": "/?source=pwa",
+  "scope": "/",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#000000",
+  "background_color": "#ffffff",
+  "theme_color": "#4361ee",
+  "orientation": "portrait",
+  "display_override": [
+    "window-controls-overlay"
+  ],
+  "categories": [
+    "finance",
+    "business"
+  ],
+  "dir": "auto",
+  "lang": "en-US",
+  "prefer_related_applications": false,
+  "iarc_rating_id": "e84b072d-71b3-4d3e-86ae-31a8ce4e53b7",
   "icons": [
     {
       "src": "/icon-192x192.png",
+      "sizes": "192x192",
       "type": "image/png",
-      "sizes": "192x192"
+      "purpose": "any"
     },
     {
       "src": "/icon-512x512.png",
+      "sizes": "512x512",
       "type": "image/png",
-      "sizes": "512x512"
+      "purpose": "any"
+    },
+    {
+      "src": "/maskable_icon.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
-  ]
+  ],
+  "screenshots": [
+    {
+      "src": "/screenshots/screenshot1.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "label": "Credit Analysis Dashboard"
+    },
+    {
+      "src": "/screenshots/screenshot2.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "label": "AI Underwriting"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "Start New Analysis",
+      "short_name": "Analyze",
+      "description": "Upload a new credit report for analysis",
+      "url": "/credit",
+      "icons": [
+        {
+          "src": "/icon-192x192.png",
+          "sizes": "192x192"
+        }
+      ]
+    }
+  ],
+  "share_target": {
+    "action": "/share-target/",
+    "method": "POST",
+    "enctype": "multipart/form-data",
+    "params": {
+      "files": [
+        {
+          "name": "file",
+          "accept": [
+            "application/pdf",
+            "image/jpeg",
+            "image/png"
+          ]
+        }
+      ]
+    }
+  }
 }
