--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -1,65 +1,63 @@
 {
-  "name": "CreditWise AI",
-  "short_name": "CreditWiseAI",
-  "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
-  "start_url": "/",
-  "id": "/?source=pwa",
+  "name": "MkCreditWise.com",
+  "short_name": "MkCreditWise",
+  "id": "com.mkcreditwise.ai",
+  "description": "Advanced AI Credit Score Analyzer & ML Model Trainer by MkCreditWise.com",
+  "start_url": "/?source=pwa",
   "scope": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#f5f7fa",
   "theme_color": "#4361ee",
   "orientation": "portrait",
-  "display_override": [
-    "window-controls-overlay"
-  ],
+  "dir": "ltr",
+  "lang": "en-US",
   "categories": [
     "finance",
-    "business"
+    "business",
+    "productivity"
   ],
-  "dir": "auto",
-  "lang": "en-US",
-  "prefer_related_applications": false,
   "iarc_rating_id": "e84b072d-71b3-4d3e-86ae-31a8ce4e53b7",
   "icons": [
     {
       "src": "/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     },
     {
       "src": "/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/maskable_icon.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
+      "type": "image/png"
     }
   ],
-  "screenshots": [
+  "related_applications": [
     {
-      "src": "/screenshots/screenshot1.png",
-      "sizes": "1280x720",
-      "type": "image/png",
-      "label": "Credit Analysis Dashboard"
+      "platform": "play",
+      "url": "https://play.google.com/store/apps/details?id=com.mkcreditwise.ai",
+      "id": "com.mkcreditwise.ai"
     },
     {
-      "src": "/screenshots/screenshot2.png",
-      "sizes": "1280x720",
-      "type": "image/png",
-      "label": "AI Underwriting"
+      "platform": "webapp",
+      "url": "https://mkcreditwise.com/manifest.json"
     }
   ],
+  "prefer_related_applications": false,
+  "share_target": {
+    "action": "/share-target",
+    "method": "POST",
+    "enctype": "multipart/form-data",
+    "params": {
+      "title": "name",
+      "text": "description",
+      "url": "link"
+    }
+  },
   "shortcuts": [
     {
-      "name": "Start New Analysis",
+      "name": "New Analysis",
       "short_name": "Analyze",
-      "description": "Upload a new credit report for analysis",
-      "url": "/credit",
+      "description": "Start a new credit analysis",
+      "url": "/credit?source=pwa_shortcut",
       "icons": [
         {
           "src": "/icon-192x192.png",
@@ -68,21 +66,12 @@
       ]
     }
   ],
-  "share_target": {
-    "action": "/share-target/",
-    "method": "POST",
-    "enctype": "multipart/form-data",
-    "params": {
-      "files": [
-        {
-          "name": "file",
-          "accept": [
-            "application/pdf",
-            "image/jpeg",
-            "image/png"
-          ]
-        }
-      ]
+  "display_override": [
+    "window-controls-overlay"
+  ],
+  "scope_extensions": [
+    {
+      "origin": "*.mkcreditwise.com"
     }
-  }
+  ]
 }
