--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,45 +1,11 @@
-
 {
-  "id": "creditwise-ai-pwa",
-  "name": "CreditWise AI",
-  "short_name": "CreditWiseAI",
-  "orientation": "portrait",
-  "categories": [
-    "finance",
-    "business",
-    "productivity"
-  ],
-  "dir": "ltr",
-  "iarc_rating_id": "e84b072d-71b3-4d3e-86ae-31a8ce4e53b7",
-  "lang": "en-US",
-  "related_applications": [
-    {
-      "platform": "play",
-      "url": "https://play.google.com/store/apps/details?id=com.creditwise.ai",
-      "id": "com.creditwise.ai"
-    },
-    {
-      "platform": "web",
-      "url": "https://creditwise.ai"
-    }
-  ],
-  "prefer_related_applications": false,
-  "share_target": {
-    "action": "/share-score",
-    "method": "POST",
-    "enctype": "multipart/form-data",
-    "params": {
-      "title": "name",
-      "text": "description",
-      "url": "link"
-    }
-  },
-  "start_url": "/?source=pwa",
-  "scope": "/",
+  "name": "MkCreditWise.com",
+  "short_name": "CreditWise",
+  "description": "Advanced AI Credit Score Analyzer & ML Model Trainer by MkCreditWise.com",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#f5f7fa",
   "theme_color": "#4361ee",
-  "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
   "icons": [
     {
       "src": "/icon-192x192.png",
@@ -51,5 +17,14 @@
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "id": "com.mkcreditwise.ai",
+  "share_target": {
+    "action": "/share-target",
+    "params": {
+      "title": "title",
+      "text": "text",
+      "url": "url"
+    }
+  }
 }
