--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,30 +1,63 @@
 {
-  "name": "MkCreditWise.com",
-  "short_name": "CreditWise",
-  "description": "Advanced AI Credit Score Analyzer & ML Model Trainer by MkCreditWise.com",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#f5f7fa",
-  "theme_color": "#4361ee",
+  "name": "CreditWise AI",
+  "short_name": "CreditWiseAI",
+  "start_url": "/?source=pwa",
   "icons": [
     {
       "src": "/icon-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
       "src": "/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
-  "id": "com.mkcreditwise.ai",
-  "share_target": {
-    "action": "/share-target",
-    "params": {
-      "title": "title",
-      "text": "text",
-      "url": "url"
+  "display": "standalone",
+  "background_color": "#f5f7fa",
+  "theme_color": "#4361ee",
+  "orientation": "portrait",
+  "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
+  "screenshots": [
+    {
+      "src": "/screenshots/mobile.png",
+      "sizes": "1080x1920",
+      "type": "image/png",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "/screenshots/desktop.png",
+      "sizes": "1920x1080",
+      "type": "image/png",
+      "form_factor": "wide"
     }
-  }
+  ],
+  "launch_handler": {
+    "client_mode": "focus-existing"
+  },
+  "id": "/?id=creditwise",
+  "categories": [
+    "finance",
+    "business"
+  ],
+  "dir": "ltr",
+  "lang": "en-US",
+  "iarc_rating_id": "e84b072d-71b3-4d3e-86ae-31a8ce4e53b7",
+  "prefer_related_applications": false,
+  "related_applications": [
+    {
+      "platform": "play",
+      "url": "https://play.google.com/store/apps/details?id=com.creditwise.ai",
+      "id": "com.creditwise.ai"
+    }
+  ],
+  "scope": "/",
+  "scope_extensions": [
+    {
+      "origin": "https://*.creditwise.ai"
+    }
+  ]
 }
