--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,22 @@
 {
-  "name": "CreditWise AI",
+  "name": "MkCreditWise.com",
   "short_name": "CreditWiseAI",
+  "id": "com.mkcreditwise.ai",
+  "description": "Advanced AI Credit Score Analyzer & ML Model Trainer by MkCreditWise.com",
   "start_url": "/?source=pwa",
+  "scope": "/",
+  "display": "standalone",
+  "background_color": "#f5f7fa",
+  "theme_color": "#4361ee",
+  "orientation": "portrait",
+  "dir": "ltr",
+  "lang": "en-US",
+  "categories": [
+    "finance",
+    "business",
+    "productivity"
+  ],
+  "iarc_rating_id": "e84b072d-71b3-4d3e-86ae-31a8ce4e53b7",
   "icons": [
     {
       "src": "/icon-192x192.png",
@@ -16,11 +31,6 @@
       "purpose": "any maskable"
     }
   ],
-  "display": "standalone",
-  "background_color": "#f5f7fa",
-  "theme_color": "#4361ee",
-  "orientation": "portrait",
-  "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
   "screenshots": [
     {
       "src": "/screenshots/mobile.png",
@@ -35,29 +45,78 @@
       "form_factor": "wide"
     }
   ],
-  "launch_handler": {
-    "client_mode": "focus-existing"
-  },
-  "id": "/?id=creditwise",
-  "categories": [
-    "finance",
-    "business"
-  ],
-  "dir": "ltr",
-  "lang": "en-US",
-  "iarc_rating_id": "e84b072d-71b3-4d3e-86ae-31a8ce4e53b7",
-  "prefer_related_applications": false,
   "related_applications": [
     {
       "platform": "play",
-      "url": "https://play.google.com/store/apps/details?id=com.creditwise.ai",
-      "id": "com.creditwise.ai"
+      "url": "https://play.google.com/store/apps/details?id=com.mkcreditwise.ai",
+      "id": "com.mkcreditwise.ai"
     }
   ],
-  "scope": "/",
+  "prefer_related_applications": false,
   "scope_extensions": [
     {
-      "origin": "https://*.creditwise.ai"
+      "origin": "https://*.mkcreditwise.com"
+    }
+  ],
+  "display_override": [
+    "window-controls-overlay",
+    "minimal-ui"
+  ],
+  "edge_side_panel": {
+    "preferred_width": 400
+  },
+  "file_handlers": [
+    {
+      "action": "/process-file",
+      "accept": {
+        "application/pdf": [
+          ".pdf"
+        ],
+        "application/json": [
+          ".json"
+        ]
+      }
+    }
+  ],
+  "handle_links": "preferred",
+  "launch_handler": {
+    "client_mode": "focus-existing"
+  },
+  "protocol_handlers": [
+    {
+      "protocol": "creditwise",
+      "url": "/handle-protocol?url=%s"
+    }
+  ],
+  "share_target": {
+    "action": "/share-target",
+    "method": "POST",
+    "enctype": "multipart/form-data",
+    "params": {
+      "title": "title",
+      "text": "text",
+      "url": "url"
+    }
+  },
+  "shortcuts": [
+    {
+      "name": "New Analysis",
+      "short_name": "Analyze",
+      "url": "/new-analysis",
+      "icons": [
+        {
+          "src": "/icon-analyze.png",
+          "sizes": "96x96"
+        }
+      ]
+    }
+  ],
+  "widgets": [
+    {
+      "name": "Credit Score",
+      "tag": "credit-score",
+      "template": "/widgets/score.html",
+      "data": "/widgets/score.json"
     }
   ]
 }
