--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,8 @@
+
 {
   "name": "MkCreditWise.com",
   "short_name": "CreditWiseAI",
-  "id": "com.mkcreditwise.ai",
+  "id": "/?utm_source=pwa",
   "description": "Advanced AI Credit Score Analyzer & ML Model Trainer by MkCreditWise.com",
   "start_url": "/?source=pwa",
   "scope": "/",
@@ -22,7 +23,7 @@
       "src": "/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     },
     {
       "src": "/icon-512x512.png",
@@ -31,92 +32,42 @@
       "purpose": "any maskable"
     }
   ],
-  "screenshots": [
-    {
-      "src": "/screenshots/mobile.png",
-      "sizes": "1080x1920",
-      "type": "image/png",
-      "form_factor": "narrow"
-    },
-    {
-      "src": "/screenshots/desktop.png",
-      "sizes": "1920x1080",
-      "type": "image/png",
-      "form_factor": "wide"
-    }
-  ],
   "related_applications": [
     {
       "platform": "play",
       "url": "https://play.google.com/store/apps/details?id=com.mkcreditwise.ai",
       "id": "com.mkcreditwise.ai"
+    },
+    {
+      "platform": "webapp",
+      "url": "https://mkcreditwise.com/manifest.json"
     }
   ],
   "prefer_related_applications": false,
-  "scope_extensions": [
-    {
-      "origin": "https://*.mkcreditwise.com"
-    }
-  ],
-  "display_override": [
-    "window-controls-overlay",
-    "minimal-ui"
-  ],
-  "edge_side_panel": {
-    "preferred_width": 400
-  },
-  "file_handlers": [
-    {
-      "action": "/process-file",
-      "accept": {
-        "application/pdf": [
-          ".pdf"
-        ],
-        "application/json": [
-          ".json"
-        ]
-      }
-    }
-  ],
-  "handle_links": "preferred",
-  "launch_handler": {
-    "client_mode": "focus-existing"
-  },
-  "protocol_handlers": [
-    {
-      "protocol": "creditwise",
-      "url": "/handle-protocol?url=%s"
-    }
-  ],
   "share_target": {
     "action": "/share-target",
-    "method": "POST",
-    "enctype": "multipart/form-data",
     "params": {
-      "title": "title",
-      "text": "text",
-      "url": "url"
+      "title": "name",
+      "text": "description",
+      "url": "link"
     }
   },
+  "display_override": [
+    "window-controls-overlay"
+  ],
   "shortcuts": [
     {
-      "name": "New Analysis",
+      "name": "Start New Analysis",
       "short_name": "Analyze",
-      "url": "/new-analysis",
+      "description": "Upload a new CIBIL report for analysis",
+      "url": "/credit?action=new-analysis",
       "icons": [
         {
-          "src": "/icon-analyze.png",
-          "sizes": "96x96"
+          "src": "/icons/shortcut-icon.png",
+          "sizes": "96x96",
+          "type": "image/png"
         }
       ]
-    }
-  ],
-  "widgets": [
-    {
-      "name": "Credit Score",
-      "tag": "credit-score",
-      "template": "/widgets/score.html",
-      "data": "/widgets/score.json"
     }
   ]
 }
