--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,28 +1,60 @@
 {
-  "name": "MkCreditWise.com - AI Credit Analysis",
+  "name": "CreditWise AI",
   "short_name": "CreditWiseAI",
-  "description": "Advanced AI Credit Score Analyzer & ML Model Trainer by MkCreditWise.com",
   "start_url": "/?source=pwa",
-  "scope": "/",
+  "icons": [
+    {
+      "src": "/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ],
   "display": "standalone",
   "background_color": "#f5f7fa",
   "theme_color": "#4361ee",
-  "icons": [
+  "orientation": "portrait",
+  "description": "Advanced AI Credit Score Analyzer & ML Model Trainer",
+  "screenshots": [
     {
-      "src": "icon-192x192.png",
-      "sizes": "192x192",
+      "src": "/screenshots/mobile.png",
+      "sizes": "1080x1920",
       "type": "image/png",
-      "purpose": "any maskable"
+      "form_factor": "narrow"
     },
     {
-      "src": "icon-512x512.png",
-      "sizes": "512x512",
+      "src": "/screenshots/desktop.png",
+      "sizes": "1920x1080",
       "type": "image/png",
-      "purpose": "any"
+      "form_factor": "wide"
     }
   ],
   "launch_handler": {
     "client_mode": "focus-existing"
   },
-  "id": "com.mkcreditwise.ai"
+  "id": "/?id=creditwise",
+  "categories": ["finance", "business"],
+  "dir": "ltr",
+  "lang": "en-US",
+  "iarc_rating_id": "e84b072d-71b3-4d3e-86ae-31a8ce4e53b7",
+  "prefer_related_applications": false,
+  "related_applications": [
+    {
+      "platform": "play",
+      "url": "https://play.google.com/store/apps/details?id=com.creditwise.ai",
+      "id": "com.creditwise.ai"
+    }
+  ],
+  "scope": "/",
+  "scope_extensions": [
+    {
+      "origin": "https://*.creditwise.ai"
+    }
+  ]
 }
