--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit",
-    "postinstall": "patch-package"
+    "typecheck": "tsc --noEmit"
+  },
+  "overrides": {
+    "@genkit-ai/next": {
+      "next": "14.2.4"
+    }
   },
   "dependencies": {
     "@genkit-ai/googleai": "1.12.0",
@@ -46,7 +50,6 @@
     "genkit": "1.12.0",
     "lucide-react": "^0.475.0",
     "next": "14.2.4",
-    "patch-package": "^8.0.0",
     "pdfjs-dist": "^4.4.168",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
