--- a/package.json
+++ b/package.json
@@ -11,11 +11,6 @@
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
-  "overrides": {
-    "@genkit-ai/next": {
-      "next": "14.2.4"
-    }
-  },
   "dependencies": {
     "@genkit-ai/googleai": "1.12.0",
     "@genkit-ai/next": "1.12.0",
@@ -49,11 +44,11 @@
     "firebase": "^10.12.2",
     "genkit": "1.12.0",
     "lucide-react": "^0.475.0",
-    "next": "14.2.4",
+    "next": "15.0.0-rc.0",
     "pdfjs-dist": "^4.4.168",
-    "react": "^18.3.1",
+    "react": "19.0.0-rc.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.0.0-rc.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
@@ -63,12 +58,12 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.0.0-rc.0",
+    "@types/react-dom": "19.0.0-rc.0",
     "genkit-cli": "1.12.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.5.3"
   },
   "engines": {
     "node": "18.x"
