--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -12,9 +13,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/googleai": "1.12.0",
-    "@genkit-ai/next": "1.12.0",
-    "@hookform/resolvers": "^4.1.3",
+    "@genkit-ai/googleai": "^0.5.1",
+    "@genkit-ai/next": "0.2.2",
+    "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -42,13 +43,13 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^10.12.2",
-    "genkit": "1.12.0",
+    "genkit": "^0.4.1",
     "lucide-react": "^0.475.0",
-    "next": "15.0.0-rc.0",
+    "next": "14.2.4",
     "pdfjs-dist": "^4.4.168",
-    "react": "19.0.0-rc.0",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.0.0-rc.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
@@ -58,12 +59,12 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20",
-    "@types/react": "19.0.0-rc.0",
-    "@types/react-dom": "19.0.0-rc.0",
-    "genkit-cli": "1.12.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "genkit-cli": "^0.4.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3"
+    "typescript": "^5"
   },
   "engines": {
     "node": "18.x"
