--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -2,6 +2,8 @@
 # https://firebase.google.com/docs/app-hosting/configure
 
 runConfig:
+  # Allow public, unauthenticated access to the backend.
+  ingress: all
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
   maxInstances: 1
