--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^10.12.2",
+    "firebase-admin": "^12.1.1",
     "genkit": "^1.0.0",
     "lucide-react": "^0.475.0",
     "next": "14.2.4",
