--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -19,11 +19,11 @@ runConfig:
     - variable: NEXT_PUBLIC_FIREBASE_PROJECT_ID
       value: "creditwise-ai-nd7s0"
     - variable: NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
-      value: "creditwise-ai-nd7s0.appspot.com"
+      value: "creditwise-ai-nd7s0.firebasestorage.app"
     - variable: NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
       value: "492248595221"
     - variable: NEXT_PUBLIC_FIREBASE_APP_ID
-      value: "1:492248595221:web:e4cd8882c947d66aa6071c"
+      value: "1:492248595221:web:3fe409487b8848d4a6071c"
 
 # Serve all traffic from the Next.js server.
 # https://firebase.google.com/docs/app-hosting/configure-nextjs
