--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,6 @@ yarn-error.log*
 
 # local env files
 .env*.local
-.env
 
 # vercel
 .vercel
@@ -34,3 +33,11 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# studio
+.firebase/
+firebase.json
+database.rules.json
+storage.rules
+firebaserc
+.firebaserc
