--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -7,12 +7,23 @@ runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
   maxInstances: 1
-  # Pass the GEMINI_API_KEY secret to the backend as an environment variable.
-  # The value of this secret is managed by Google Secret Manager.
+  # Pass secrets and environment variables to the backend.
   # https://firebase.google.com/docs/app-hosting/manage-secrets
   env:
     - variable: GOOGLE_API_KEY
       secret: GEMINI_API_KEY
+    - variable: NEXT_PUBLIC_FIREBASE_API_KEY
+      value: "AIzaSyAeIyY3IH-zAkV8FSmmKyR1b32pCa46fQg"
+    - variable: NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN
+      value: "creditwise-ai-nd7s0.firebaseapp.com"
+    - variable: NEXT_PUBLIC_FIREBASE_PROJECT_ID
+      value: "creditwise-ai-nd7s0"
+    - variable: NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
+      value: "creditwise-ai-nd7s0.appspot.com"
+    - variable: NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
+      value: "492248595221"
+    - variable: NEXT_PUBLIC_FIREBASE_APP_ID
+      value: "1:492248595221:web:ba48c35eec8dc524a6071c"
 
 # Serve all traffic from the Next.js server.
 # https://firebase.google.com/docs/app-hosting/configure-nextjs
@@ -21,4 +32,3 @@ headers:
     headers:
       - key: Cache-Control
         value: 'private, max-age=0, no-store, must-revalidate'
-
