--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-# For local development, you can add your Gemini API key here.
-# GOOGLE_API_KEY=your_gemini_api_key
+NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyAeIyY3IH-zAkV8FSmmKyR1b32pCa46fQg"
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="creditwise-ai-nd7s0.firebaseapp.com"
+NEXT_PUBLIC_FIREBASE_PROJECT_ID="creditwise-ai-nd7s0"
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="creditwise-ai-nd7s0.appspot.com"
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="492248595221"
+NEXT_PUBLIC_FIREBASE_APP_ID="1:492248595221:web:3fe409487b8848d4a6071c"
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-8LLWXP1RJP"
