--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/recharts": "^1.8.29",
     "autoprefixer": "^10.4.19",
+    "genkit-cli": "^1.0.0",
     "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
   "engines": {
     "node": "18.x"
   }
 }
-
-    
