--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "firebase": "^10.12.2",
     "lucide-react": "^0.475.0",
     "next": "14.2.4",
+    "next-pwa": "^5.6.0",
+    "pdfjs-dist": "^4.4.168",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^3.0.1",
