--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,36 @@
 {
   "name": "CreditWise AI",
   "short_name": "CreditWise",
-  "description": "AI-Powered Credit Analysis",
+  "description": "AI-powered credit analysis and improvement.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#4361ee",
+  "background_color": "#F0F2F5",
+  "theme_color": "#3F51B5",
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
+    }
+  ],
+  "share_target": {
+    "action": "/share-target/",
+    "method": "GET",
+    "params": {
+      "title": "title",
+      "text": "text",
+      "url": "url"
+    }
+  },
+  "protocol_handlers": [
+    {
+      "protocol": "web+creditwise",
+      "url": "/handle-protocol?url=%s"
     }
   ]
 }
