--- a/firebase.json
+++ b/firebase.json
@@ -1,17 +1,22 @@
 {
-  "firestore": {
-    "rules": "firestore.rules"
-  },
   "emulators": {
     "auth": {
+      "host": "127.0.0.1",
       "port": 9099
     },
     "firestore": {
-      "port": 8080
+      "host": "127.0.0.1",
+      "port": 8080,
+      "rules": "firestore.rules"
     },
     "ui": {
       "enabled": true,
+      "host": "127.0.0.1",
       "port": 4000
+    },
+    "hub": {
+      "host": "127.0.0.1",
+      "port": 4400
     }
   }
 }
