--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,3 +5,4 @@ steps:
 # Build the Next.js application
 - name: 'gcr.io/cloud-builders/npm'
   args: ['run', 'build']
+serviceAccount: 'projects/creditwise-ai-nd7s0/serviceAccounts/firebase-app-hosting-build@creditwise-ai-nd7s0.iam.gserviceaccount.com'
