Google Cloud Build / rmgpgab-studio-europe-west1-shanmuka5657-studio--ma

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,3 +6,5 @@ steps:
 - name: 'gcr.io/cloud-builders/npm'
   args: ['run', 'build']
 serviceAccount: 'projects/creditwise-ai-nd7s0/serviceAccounts/firebase-app-hosting-build@creditwise-ai-nd7s0.iam.gserviceaccount.com'
+options:
+  logging: CLOUD_LOGGING_ONLY
