--- a/firebase.json
+++ b/firebase.json
@@ -1,22 +1,28 @@
 {
   "emulators": {
     "auth": {
-      "host": "127.0.0.1",
+      "host": "0.0.0.0",
       "port": 9099
     },
     "firestore": {
-      "host": "127.0.0.1",
-      "port": 8080,
-      "rules": "firestore.rules"
+      "host": "0.0.0.0",
+      "port": 8080
+    },
+    "storage": {
+      "host": "0.0.0.0",
+      "port": 9199
     },
     "ui": {
       "enabled": true,
-      "host": "127.0.0.1",
+      "host": "0.0.0.0",
       "port": 4000
     },
     "hub": {
-      "host": "127.0.0.1",
+      "host": "0.0.0.0",
       "port": 4400
     }
+  },
+  "firestore": {
+    "rules": "firestore.rules"
   }
 }
