--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,38 +1,47 @@
-
 # Settings to manage and configure a Firebase App Hosting backend.
-# https://firebase.google.com/docs/app-hosting/configure
-
-runConfig:
-  # Allow public, unauthenticated access to the backend.
-  ingress: all
-  # Increase this value if you'd like to automatically spin up
-  # more instances in response to increased traffic.
-  maxInstances: 1
-  # Pass secrets and environment variables to the backend.
-  # https://firebase.google.com/docs/app-hosting/manage-secrets
-  env:
-    - variable: GEMINI_API_KEY
-      secret: GEMINI_API_KEY
-    - variable: NEXT_PUBLIC_FIREBASE_API_KEY
-      value: "AIzaSyAeIyY3IH-zAkV8FSmmKyR1b32pCa46fQg"
-    - variable: NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN
-      value: "creditwise-ai-nd7s0.firebaseapp.com"
-    - variable: NEXT_PUBLIC_FIREBASE_PROJECT_ID
-      value: "creditwise-ai-nd7s0"
-    - variable: NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
-      value: "creditwise-ai-nd7s0.firebasestorage.app"
-    - variable: NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
-      value: "492248595221"
-    - variable: NEXT_PUBLIC_FIREBASE_APP_ID
-      value: "1:492248595221:web:3fe409487b8848d4a6071c"
-
-logging: CLOUD_LOGGING_ONLY
-
-# Serve all traffic from the Next.js server.
 # https://firebase.google.com/docs/app-hosting/configure-nextjs
-headers:
-  - source: /
-    headers:
-      - key: Cache-Control
-        value: 'private, max-age=0, no-store, must-revalidate'
 
+# The version of the App Hosting configuration schema.
+version: 1
+
+# The command that starts the Next.js server.
+run: npm run start
+
+# Optional: The command that builds the Next.js application.
+# If you specify a build command, App Hosting runs it before deploying your app.
+build: npm run build
+
+# Firebase-managed infrastructure for your Next.js app.
+resources:
+  # The amount of CPU to allocate to each instance of your app.
+  cpu: 0.5
+  # The amount of memory to allocate to each instance of your app.
+  memoryMiB: 1024
+
+# Environment variables and secrets for your Next.js app.
+env:
+  # App Hosting automatically sets the PORT environment variable.
+  # Your Next.js app should listen on this port.
+  - variable: GEMINI_API_KEY
+    secret: GEMINI_API_KEY
+  - variable: NEXT_PUBLIC_FIREBASE_API_KEY
+    value: "AIzaSyAeIyY3IH-zAkV8FSmmKyR1b32pCa46fQg"
+  - variable: NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN
+    value: "creditwise-ai-nd7s0.firebaseapp.com"
+  - variable: NEXT_PUBLIC_FIREBASE_PROJECT_ID
+    value: "creditwise-ai-nd7s0"
+  - variable: NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
+    value: "creditwise-ai-nd7s0.firebasestorage.app"
+  - variable: NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
+    value: "492248595221"
+  - variable: NEXT_PUBLIC_FIREBASE_APP_ID
+    value: "1:492248595221:web:3fe409487b8848d4a6071c"
+
+# Automatic scaling settings for your Next.js app.
+scaling:
+  # The minimum number of instances to keep running at all times.
+  minInstances: 0
+  # The maximum number of instances to scale up to.
+  maxInstances: 2
+  # The number of concurrent requests to route to each instance.
+  concurrency: 80
