--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,6 +5,16 @@ steps:
 # Build the Next.js application
 - name: 'gcr.io/cloud-builders/npm'
   args: ['run', 'build']
+# Deploy to Firebase App Hosting
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  entrypoint: 'gcloud'
+  args:
+    - 'apphosting'
+    - 'backends'
+    - 'update'
+    - 'pwa' # This should match the backend ID you created
+    - '--region=us-central1'
+    - '--project=creditwise-ai-nd7s0'
 serviceAccount: 'projects/creditwise-ai-nd7s0/serviceAccounts/firebase-app-hosting-build@creditwise-ai-nd7s0.iam.gserviceaccount.com'
 options:
   logging: CLOUD_LOGGING_ONLY
