Misconfigured secret Error resolving secret version with name=projects/c

--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -22,8 +22,8 @@ resources:
 env:
   # App Hosting automatically sets the PORT environment variable.
   # Your Next.js app should listen on this port.
-  - variable: GEMINI_API_KEY
-    secret: GEMINI_API_KEY
+  # - variable: GEMINI_API_KEY
+  #   secret: GEMINI_API_KEY
   - variable: NEXT_PUBLIC_FIREBASE_API_KEY
     value: "AIzaSyAeIyY3IH-zAkV8FSmmKyR1b32pCa46fQg"
   - variable: NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN
