--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,6 +16,7 @@ steps:
     - 'pwa'
     - '--region=us-central1'
     - '--project=creditwise-ai-nd7s0'
+# This service account is crucial for granting the build process permissions to deploy.
 serviceAccount: 'projects/creditwise-ai-nd7s0/serviceAccounts/firebase-app-hosting-build@creditwise-ai-nd7s0.iam.gserviceaccount.com'
 options:
   logging: CLOUD_LOGGING_ONLY
