--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,10 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
@@ -33,11 +36,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-# studio
-.firebase/
-firebase.json
-database.rules.json
-storage.rules
-firebaserc
-.firebaserc
