i have zero knoelege please make it clear

--- a/.env
+++ b/.env
@@ -1,27 +1,15 @@
-<<<<<<< HEAD
-<<<<<<< HEAD
-NEXT_PUBLIC_FIREBASE_API_KEY=YOUR_API_KEY_HERE
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=YOUR_AUTH_DOMAIN_HERE
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=YOUR_PROJECT_ID_HERE
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=YOUR_STORAGE_BUCKET_HERE
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=YOUR_MESSAGING_SENDER_ID_HERE
-NEXT_PUBLIC_FIREBASE_APP_ID=YOUR_APP_ID_HERE
-NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-8LLWXP1RJP"
-=======
-# For local development, you can add your Gemini API key here.
-# GOOGLE_API_KEY=your_gemini_api_key
-<<<<<<< HEAD
-GEMINI_API_KEY=YOUR_GEMINI_API_KEY_HERE
->>>>>>> 8d5b041 (I see this error with the app, reported by NextJS, please fix it. The er)
-=======
-GEMINI_API_KEY=YOUR_GEMINI_API_KEY_HERE
->>>>>>> 1667031 (I see this error with the app, reported by NextJS, please fix it. The er)
-=======
+# This is a template file. DO NOT ADD YOUR KEYS HERE.
+# Instead, create a new file named ".env.local", copy this content into it,
+# and then fill in your actual Firebase project keys.
 
-NEXT_PUBLIC_FIREBASE_API_KEY=YOUR_API_KEY_HERE
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=YOUR_AUTH_DOMAIN_HERE
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=YOUR_PROJECT_ID_HERE
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=YOUR_STORAGE_BUCKET_HERE
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=YOUR_MESSAGING_SENDER_ID_HERE
-NEXT_PUBLIC_FIREBASE_APP_ID=YOUR_APP_ID_HERE
->>>>>>> e1af5af (I see this error with the app, reported by NextJS, please fix it. The er)
+# Firebase Public Config - Get these from your Firebase project settings
+NEXT_PUBLIC_FIREBASE_API_KEY="YOUR_API_KEY_HERE"
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="YOUR_AUTH_DOMAIN_HERE"
+NEXT_PUBLIC_FIREBASE_PROJECT_ID="YOUR_PROJECT_ID_HERE"
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="YOUR_STORAGE_BUCKET_HERE"
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="YOUR_MESSAGING_SENDER_ID_HERE"
+NEXT_PUBLIC_FIREBASE_APP_ID="YOUR_APP_ID_HERE"
+
+# Gemini API Key (Optional for now)
+# You can leave this blank if you don't have one yet.
+GEMINI_API_KEY=
