--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -32,7 +32,7 @@ env:
   - variable: NEXT_PUBLIC_FIREBASE_PROJECT_ID
     value: "creditwise-ai-nd7s0"
   - variable: NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET
-    value: "creditwise-ai-nd7s0.firebasestorage.app"
+    value: "creditwise-ai-nd7s0.appspot.com"
   - variable: NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID
     value: "492248595221"
   - variable: NEXT_PUBLIC_FIREBASE_APP_ID
