give complete prompt of code

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-# This is a template file. DO NOT ADD YOUR KEYS HERE.
-# Instead, create a new file named ".env.local", copy this content into it,
-# and then fill in your actual Firebase project keys.
+# This file is a template.
+# For local development, create a new file named .env.local
+# and copy your Firebase project configuration here.
+# This file (.env) can be committed to Git, but .env.local should NOT be.
 
-# Firebase Public Config - Get these from your Firebase project settings
+# Firebase Public Config - Replace with your actual project keys
 NEXT_PUBLIC_FIREBASE_API_KEY="YOUR_API_KEY_HERE"
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="YOUR_AUTH_DOMAIN_HERE"
 NEXT_PUBLIC_FIREBASE_PROJECT_ID="YOUR_PROJECT_ID_HERE"
@@ -10,6 +11,6 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="YOUR_STORAGE_BUCKET_HERE"
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="YOUR_MESSAGING_SENDER_ID_HERE"
 NEXT_PUBLIC_FIREBASE_APP_ID="YOUR_APP_ID_HERE"
 
-# Gemini API Key (Optional for now)
-# You can leave this blank if you don't have one yet.
+# Gemini API Key (optional for local development)
+# If you don't have one yet, you can leave this blank.
 GEMINI_API_KEY=
