--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,4 +1,4 @@
-# Settings to manage and configure a Firebase App Hosting backend.
+{# Settings to manage and configure a Firebase App Hosting backend.
 # https://firebase.google.com/docs/app-hosting/configure-nextjs
 
 # The version of the App Hosting configuration schema.
