i am not understanding please do it for me

--- a/.env
+++ b/.env
@@ -1,9 +1,7 @@
-# This file is a template.
-# For local development, create a new file named .env.local
-# and copy your Firebase project configuration here.
-# This file (.env) can be committed to Git, but .env.local should NOT be.
+# This file is a template. Create a `.env.local` file and add your keys there.
+# DO NOT commit your keys to this file or any other file.
 
-# Firebase Public Config - Replace with your actual project keys
+# Firebase Public Config - Get these from your Firebase project settings
 NEXT_PUBLIC_FIREBASE_API_KEY="YOUR_API_KEY_HERE"
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="YOUR_AUTH_DOMAIN_HERE"
 NEXT_PUBLIC_FIREBASE_PROJECT_ID="YOUR_PROJECT_ID_HERE"
@@ -11,6 +9,7 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="YOUR_STORAGE_BUCKET_HERE"
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="YOUR_MESSAGING_SENDER_ID_HERE"
 NEXT_PUBLIC_FIREBASE_APP_ID="YOUR_APP_ID_HERE"
 
-# Gemini API Key (optional for local development)
-# If you don't have one yet, you can leave this blank.
-GEMINI_API_KEY=
+# Gemini API Key (Optional for now)
+# This is NOT needed for the app to run or deploy.
+# You can get this from Google AI Studio.
+GEMINI_API_KEY=""
