--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@tailwindcss/typography": "^0.5.13"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
