--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tailwindcss/typography": "^0.5.13",
+    "@types/node": "^20",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/recharts": "^1.8.29",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -40,16 +45,11 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8",
-    "@tailwindcss/typography": "^0.5.13"
+    "typescript": "^5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/recharts": "^1.8.29",
-    "genkit-cli": "^1.0.0",
-    "typescript": "^5"
+    "genkit-cli": "^1.0.0"
   },
   "engines": {
     "node": "18.x"
