The `npm install` command failed in my project. Analyze the following er

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@
 # IMPORTANT: Replace "your-api-key-here" with the key from your Firebase project settings.
 # You can find it in the Firebase console: Project Settings > General > Your apps > Web app > SDK setup and configuration.
 NEXT_PUBLIC_FIREBASE_API_KEY="your-api-key-here"
+GEMINI_API_KEY=
