--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5",
+    "wav": "^1.0.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -50,6 +51,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/recharts": "^1.8.29",
+    "@types/wav": "^1.0.3",
     "genkit-cli": "^1.0.0"
   },
   "engines": {
