Your apphosting.yaml file at path '/workspace/apphosting.yaml' is not fo

--- a/workspace/apphosting.yaml
+++ b/workspace/apphosting.yaml
@@ -1,13 +1,28 @@
+# Settings to manage and configure a Firebase App Hosting backend.
+# https://firebase.google.com/docs/app-hosting/configure
+
+# Specifies the version of the App Hosting YAML schema.
 version: 1
-run: npm run start
-build: npm run build
-resources:
-  cpu: 0.5
-  memoryMiB: 1024
-scaling:
+
+# Defines the runtime configuration for the backend.
+runConfig:
+  # The command to start the web server.
+  command: npm run start
+  # The minimum number of instances to keep running. 0 allows scaling to zero.
   minInstances: 0
+  # The maximum number of instances to scale up to.
   maxInstances: 2
+  # The maximum number of concurrent requests an instance can handle.
   concurrency: 80
+  # Specifies that the backend should be accessible from the public internet.
+  ingress: all
+  # Defines the CPU and memory resources for each instance.
+  resources:
+    cpu: 0.5
+    memoryMiB: 1024
+
+# Defines environment variables for the backend.
+# The GEMINI_API_KEY is commented out but can be enabled if you have the secret configured.
 # env:
 #   - variable: GEMINI_API_KEY
 #     secret: GEMINI_API_KEY
